--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ html {
 
 body {
     margin: 0;
+    padding: 0;
     font-size: var(--font-size);
     background-color: var(--white);
     color: var(--black);
@@ -35,27 +36,55 @@ body {
     color: white;
 }
 
+h1,
+h2,
+h3 {
+    margin: 0;
+}
+
+a {
+    color: var(--magenta);
+}
+
+a:hover {
+    text-decoration: none;
+    color: var(--hotmag);
+}
+
+
+#intro {
+    padding: 4rem 1rem 10rem 1rem;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
 #intro .name {
-    font-size: 0.75rem; /* 0.75rem = 12px */
+    font-size: 1rem; /* 0.75rem = 12px */
+    font-family: var(--mono);
 }
 
 #intro .name span {
     font-family: var(--sans);
-    font-size: 2rem;
-    font-weight: bold;
+    font-size: 4rem;
+    font-weight: 300;
     display: block;
     color: #40E0D0;
 }
 
 
 #intro p {
-    font-size: 1.25rem;
-    margin: .5rem;
+    font-size: 1rem;
+    line-height: 1.5;
+}
+
+#intro h2 {
+    font-size: 4rem;
 }
 
 #intro .highlight {
     font-weight: bold;
     color: var(--highlight-color);
 }
+
 
 
