--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,26 @@ a:hover {
 }
 
 
+.gradient {
+    background: linear-gradient(90deg, rgba(255, 23, 228, 1) 0%, rgba(134, 251, 251, 1) 100%);
+    height: 2px;
+}
+
+
+.button {
+    background-color: var(--magenta);
+    color: white;
+    padding: 0.5rem;
+    border-radius: 5px;
+    text-decoration: none;
+    font-family: var(--mono);
+}
+
+.button:hover {
+    color: white;
+    background-color: var(--hotmag);
+}
+
 #intro {
     padding: 4rem 1rem 10rem 1rem;
     max-width: 1200px;
@@ -87,4 +107,25 @@ a:hover {
 }
 
 
+/* Contact Style */
+#contact {
+    width: 400px;
+    text-align: center;
+    margin: 0 auto;
+    padding: 4rem 0;
+}
+
+#contact p {
+    margin-bottom: 2rem;
+}
+
+
+#contact p:last-child {
+    margin-top: 3rem;
+}
+
+
+.section-plum {
+    background-color: var(--plum);
+}
 
