--- a/css/style.css
+++ b/css/style.css
@@ -1,176 +1,213 @@
 :root {
-    --black: #171321;
-    --dkblue: #0d314b;
-    --plum: #4b0d49;
-    --hotmag: #ff17e4;
-    --magenta: #e310cb;
-    --aqua: #86fbfb;
-    --white: #f7f8fa;
-    --font-size: 1rem; /* Default font size is 16px */
-    /* --mono: "Courier New", Courier, monospace;
+  --black: #171321;
+  --dkblue: #0d314b;
+  --plum: #4b0d49;
+  --hotmag: #ff17e4;
+  --magenta: #e310cb;
+  --aqua: #86fbfb;
+  --white: #f7f8fa;
+  --font-size: 1rem; /* Default font size is 16px */
+  /* --mono: "Courier New", Courier, monospace;
     --sans: "Courier New", Courier, monospace; */
-    /* --mono: 'Roboto Mono', monospace;
+  /* --mono: 'Roboto Mono', monospace;
     --sans: 'Roboto', sans-serif; */
-    --font-size: 1.3rem;
-    --mono: "Oxygen mono", monospace;
-    --sans: Oxygen, sans-serif;
-    --highlight-color: #9FE2BF; /* Highlight color for keywords */
+  --font-size: 1.3rem;
+  --mono: "Oxygen mono", monospace;
+  --sans: Oxygen, sans-serif;
+  --highlight-color: #9fe2bf; /* Highlight color for keywords */
 }
 
 html {
-    box-sizing: border-box;
-    font-size: 16px;;
+  box-sizing: border-box;
+  font-size: 16px;
 }
 
 *,
 *::before,
 *::after {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    font-size: var(--font-size);
-    background-color: var(--white);
-    color: var(--black);
-    font-family: var(--sans);
-    background-color: var(--black);
-    color: white;
+  margin: 0;
+  padding: 0;
+  font-size: var(--font-size);
+  background-color: var(--white);
+  color: var(--black);
+  font-family: var(--sans);
+  background-color: var(--black);
+  color: white;
 }
 
 h1,
 h2,
 h3 {
-    margin: 0;
+  margin: 0;
 }
 
 a {
-    color: var(--magenta);
+  color: var(--magenta);
 }
 
 a:hover {
-    text-decoration: none;
-    color: var(--hotmag);
+  text-decoration: none;
+  color: var(--hotmag);
 }
-
 
 .gradient {
-    background: linear-gradient(90deg, rgba(255, 23, 228, 1) 0%, rgba(134, 251, 251, 1) 100%);
-    height: 2px;
+  background: linear-gradient(
+    90deg,
+    rgba(255, 23, 228, 1) 0%,
+    rgba(134, 251, 251, 1) 100%
+  );
+  height: 2px;
 }
 
-
 .button {
-    background-color: var(--magenta);
-    color: white;
-    padding: 0.5rem;
-    border-radius: 5px;
-    text-decoration: none;
-    font-family: var(--mono);
+  background-color: var(--magenta);
+  color: white;
+  padding: 0.5rem;
+  border-radius: 5px;
+  text-decoration: none;
+  font-family: var(--mono);
 }
 
 .button:hover {
-    color: white;
-    background-color: var(--hotmag);
+  color: white;
+  background-color: var(--hotmag);
 }
 
 #intro {
-    padding: 4rem 1rem 10rem 1rem;
-    max-width: 1200px;
-    margin: 0 auto;
+  padding: 4rem 1rem 10rem 1rem;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 #intro .name {
-    font-size: 1rem; /* 0.75rem = 12px */
-    font-family: var(--mono);
+  font-size: 1rem; /* 0.75rem = 12px */
+  font-family: var(--mono);
 }
 
 #intro .name span {
-    font-family: var(--sans);
-    font-size: 4rem;
-    font-weight: 300;
-    display: block;
-    color: #40E0D0;
+  font-family: var(--sans);
+  font-size: 4rem;
+  font-weight: 300;
+  display: block;
+  color: #40e0d0;
 }
 
-
 #intro p {
-    font-size: 1rem;
-    line-height: 1.5;
+  font-size: 1rem;
+  line-height: 1.5;
 }
 
 #intro h2 {
-    font-size: 4rem;
+  font-size: 4rem;
 }
 
 #intro .highlight {
-    font-weight: bold;
-    color: var(--highlight-color);
+  font-weight: bold;
+  color: var(--highlight-color);
 }
-
 
 /* Contact Style */
 #contact {
-    width: 400px;
-    text-align: center;
-    margin: 0 auto;
-    padding: 4rem 0;
+  width: 400px;
+  text-align: center;
+  margin: 0 auto;
+  padding: 4rem 0;
 }
 
 #contact p {
-    margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
-
 
 #contact p:last-child {
-    margin-top: 3rem;
+  margin-top: 3rem;
 }
-
 
 .section-plum {
-    background-color: var(--plum);
+  background-color: var(--plum);
 }
-
-
-
-
-
-
 
 /* navigation */
 nav {
-    font-size: 80%;
+  font-size: 80%;
+  padding: 4rem 1rem;
+  font-family: var(--mono);
 }
 
-nav ul  {
-    list-style-type: none;
-    display: flex;
-    flex-flow: row wrap;
-    gap: 4rem;
-    justify-content: center;
+nav a {
+  color: white;
+  text-decoration: none;
+  display: block;
+  /* 
+    Block-Level Element:
+    By default, <a> elements are inline elements, which means they only take up as much width as necessary and do not start on a new line.
+    Setting display: block; makes the <a> elements behave like block-level elements, which means each <a> will take up the full width of its parent container and start on a new line.
+
+    Full Width:
+    The <a> elements will stretch to occupy the entire width of their parent container (in this case, likely the <li> elements within the nav).
+
+    Clickable Area:
+    The entire area of the block is clickable. This means that not just the text, but the entire width and height of the <a> element will respond to user interactions (such as clicks). 
+    */
 }
 
-nav ul li:first-child {
-    flex-basis: 100%;
-    text-align: center;
+nav h1 {
+  font-family: var(--sans);
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  flex-flow: row wrap;
+  gap: 2rem;
+  justify-content: center;
+  align-items: center;
+}
+
+nav li:first-child {
+  flex-basis: 100%;
+  text-align: center;
 }
 
 nav ul a {
-    text-decoration: none;
-    color: var(--white);
+  text-decoration: none;
+  color: var(--white);
 }
 
 nav [class*="fa-"] {
-    font-size: 150%;
-    color: var(--aqua);
+  font-size: 150%;
+  color: var(--aqua);
 }
 
-nav h1 [class*=fa-] {
-    font-size: 100%;
+nav h1 [class*="fa-"] {
+  font-size: 100%;
+  color: var(--aqua);
 }
 
-nav [class*=fa-]:hover,
-nav a {
-    color: var(--magenta);
+nav [class*="fa-"]:hover,
+nav a:hover {
+  color: var(--magenta);
+}
+
+@media (min-width: 850px) {
+  nav {
+    max-width: 1200px;
+    /* This sets the maximum width of the nav element to 1200 pixels. The nav element will not grow beyond this width even if the viewport is wider. */
+    margin: 0 auto;
+    /* This centers the nav element horizontally within its parent container by setting the left and right margins to auto. */
+  }
+  nav li:first-child {
+    flex-basis: auto;
+    /* This sets the initial main size of the first li element based on its content. It allows the item to take up only as much space as necessary. */
+    text-align: left;
+    /* This aligns the text content of the first li element to the left. */
+    margin-right: auto;
+    /* old way This pushes the first li element to the left side of the nav container and pushes the other li elements to the right. This is commonly used in flexbox layouts to create space between items. */
+    flex-grow: 1;
+  }
 }
