--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,10 @@ a:hover {
   color: var(--hotmag);
 }
 
+img {
+  width: 100%;
+}
+
 .gradient {
   background: linear-gradient(
     90deg,
@@ -194,6 +198,66 @@ nav a:hover {
   color: var(--magenta);
 }
 
+/* Project Styles */
+
+.section-blue {
+  background-color: var(--dkblue);
+}
+
+.blackbox {
+  padding: 1rem;
+  border-radius: 10px;
+  color: white;
+  background-color: var(--black);
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+#projects {
+  padding: 4rem 1rem;
+}
+
+#projects h2 {
+  font-size: 2.5rem;
+  margin-bottom: calc(2.5rem * 1.5);
+}
+
+#projects h3 {
+  color: var(--aqua);
+}
+
+#projects h4 {
+  font-size: 1rem;
+  font-family: var(--mono);
+  margin: 0;
+}
+
+#projects ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  /* his applies the CSS Flexible Box Layout Module (flexbox) to the <ul>, turning it into a flex container. This allows for flexible alignment and distribution of its child elements (the list items). */
+  flex-flow: row wrap;
+  /* This sets the flex container to display its children in a row (horizontally) and to wrap them onto the next line if there's not enough space on one line. The flex-flow property is a shorthand for setting both flex-direction and flex-wrap properties.
+    row: The flex items are placed in a horizontal line.
+    wrap: The flex items will wrap onto multiple lines if necessary. */
+  justify-content: flex-start;
+  /* This aligns the flex items at the start of the flex container, meaning they will be aligned to the left (in left-to-right languages). justify-content defines the alignment along the main axis (which is horizontal when flex-direction: row). */
+  gap: 1rem;
+  /* This sets the gap (space) between flex items to 1rem. The rem unit is relative to the root element's font size, providing consistent spacing regardless of other sizing factors. */
+  font-size: 1rem;
+}
+
+#projects img {
+  margin: 2rem 0 4rem 0;
+  padding: 1rem;
+  /* This adds 1rem of padding inside the image element. Padding adds space inside the element's border. */
+  border-left: 1px solid var(--aqua);
+  border-top: 1px solid var(--aqua);
+  border-radius: 25px;
+}
+
 @media (min-width: 850px) {
   nav {
     max-width: 1200px;
@@ -209,5 +273,41 @@ nav a:hover {
     margin-right: auto;
     /* old way This pushes the first li element to the left side of the nav container and pushes the other li elements to the right. This is commonly used in flexbox layouts to create space between items. */
     flex-grow: 1;
+  }
+}
+
+@media (min-width: 800px) {
+  article {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+  }
+  #projects {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  #projects img {
+    grid-column: 1/6;
+    grid-row: 1/2;
+  }
+  .text {
+    grid-column: 5/11;
+    grid-row: 1/2;
+    order: 2;
+    text-align: right;
+  }
+  #projects ul {
+    justify-content: flex-end;
+  }
+  #projects .reverse .text {
+    grid-column: 1/7;
+    order: 2;
+    text-align: left;
+  }
+  #projects .reverse img {
+    grid-column: 6/11;
+    grid-row: 1/2;
+  }
+  #projects .reverse ul {
+    justify-content: flex-start;
   }
 }
